# celestus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  celestus-service.yml  diesel.toml  docker-compose.yml
cache/redis/: Dockerfile  default.conf  dev.conf
configs/http2/security/certificates/: README.md  server.crt
configs/http2/security/keys/: server.key
configs/secrets/master/: README.md  keys.asc  pubkey.gpg
configs/secrets/vault/: Dockerfile  README.md  vault-init.sh
configs/secrets/vault/config/: vault-config-dev.json  vault-config.json
configs/secrets/vault/policies/: app-policy.json
db/postgres/: Dockerfile
db_schemas/: celestus  celestus.pgerd
docker-services/: nginx-service.yml  postgres-service.yml  redis-service.yml  vault-service.yml
migrations/2022-10-14-105841_create_auth_tables/: up.sql
proxy/nginx/: Dockerfile  dev.conf  prod.conf
scripts/bash/: generate-certificates.sh  openssl-bash.sh
src/lib/: lib.rs
src/lib/cache/: consts.rs  mod.rs  settings.rs
src/lib/cache/settings/: consts.rs  mod.rs
src/lib/database/: connect.rs  connection.rs  consts.rs  errors.rs  helpers.rs  mod.rs  schema.rs
src/lib/database/helpers/: mod.rs
src/lib/database/helpers/json/: mod.rs
src/lib/database/helpers/security/: mod.rs
src/lib/database/helpers/seeds/: mod.rs
src/lib/database/migrations/2022-10-14-105841_create_auth_tables/: down.sql  up.sql
src/lib/database/models/: mod.rs
src/lib/database/models/feature_flag/: mod.rs
src/lib/database/models/role/: mod.rs
src/lib/database/models/role_group/: mod.rs
src/lib/database/models/role_group/data/: seed.json
src/lib/database/models/system_config/: mod.rs
src/lib/database/models/user/: mod.rs
src/lib/database/models/user_group/: mod.rs
src/lib/providers/: mod.rs  secrets.rs
src/lib/providers/data/business/: mod.rs  postgres.rs
src/lib/providers/secrets/: mod.rs  vault.rs
src/lib/utils/: environment.rs  mod.rs  strings.rs  web.rs
