[package]
name = "celestus"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true

[[bin]]
name = "celestus"
path = "src/bin/main.rs"

[lib]
name = "celestus"
path = "src/lib/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.65"
chrono = "0.4.22"
diesel = { version = "2.0.2", features = ["postgres", "uuid", "chrono", "r2d2", "serde_json"] }
dotenvy = "0.15.5"
env_logger = "0.9.1"
itertools = "0.10.5"
jsonwebtoken = "8.1.1"
log = "0.4.17"
serde = "1.0.146"
serde_derive = "1.0.145"
serde_json = {version = "1.0.86", features = ["preserve_order"] }
thiserror = "1.0.37"
uuid = { version = "1.2.1", features = ["v4", "serde"] }