[package]
name = "celestus"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true

[[bin]]
name = "celestus"
path = "src/bin/main.rs"

[lib]
name = "celestus"
path = "src/lib/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
arrayref = "0.3.7"
arrayvec = "0.7.4"
async-trait = "0.1.77"
axum = {version = "0.7.3", features = ["form", "http1", "http2", "json", "macros", "multipart", "query", "tokio", "tracing"]}
bincode = "1.3.3"
cached = "0.47.0"
chrono = "0.4.31"
cocoon = "0.4.1"
crossbeam = "0.8"
derive_builder = "0.12.0"
diesel = { version = "2.1.4", features = ["postgres", "chrono", "network-address", "numeric", "r2d2", "serde_json", "time", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
diesel-derive-enum = "2.1.0"
dotenvy = "0.15.7"
educe = "0.5.9"
enum-iterator = "1.4.1"
enum_dispatch = "0.3.12"
env_logger = "0.10.1"
envy = "0.4.2"
getset = "0.1.2"
heck = "0.4.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
indexmap = "2.1.0"
itertools = "0.12.0"
itoa = "1.0.10"
jsonwebtoken = "9.2.0"
log = "0.4.20"
lru = "0.12.1"
nix = "0.27.1"
notify = "6.1.1"
num = "0.4.1"
overload = "0.1.1"
parking_lot = "0.12.1"
persy = "1.4.7"
phf = { version = "0.11.2", features = ["macros"] }
procfs = "0.16.0"
rayon = "1.8.0"
redis = "0.24.0"
regex = "1.10.2"
reqwest = "0.11.23"
reqwest-chain = "0.1.0"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"
strum = "0.25"
strum_macros = "0.25"
sysinfo = "0.30.4"
thiserror = "1.0.56"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
vaultrs = "0.7.0"
vaultrs-login = "0.1.7"
walkdir = "2.4.0"